# fastapi_pr

./: .gitignore  Dockerfile  alembic.ini  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py  utility.py
alembic/: env.py
alembic/versions/: 1fec64139150_initial_migration.py
routers/: auth.py  oauth2.py  posts.py  users.py
