[tool.poetry]
name = "fastapi-pr"
version = "0.1.0"
description = ""
authors = ["Ilya <lpodildaviduk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.3"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
requests = "^2.32.5"
psycopg2-binary = "^2.9.11"
sqlalchemy = "^2.0.44"
email-validator = "^2.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
argon2-cffi = "^23.1.0"
pyjwt = "^2.10.1"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
alembic = "^1.17.2"
pydantic = "^2.12.5"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"